# NeuroPlan-AI

./: .gitignore  COMMANDS.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Modelfile  alembic.ini  neuroplan.db  pyproject.toml  requirements.txt  run_local.sh  test_api.py  test_groq.py
backend/alembic/: env.py
backend/alembic/versions/: 0c7c12af544c_cross_dialect_stabilization.py  9a5a8b225a8d_add_target_level_to_subject.py  c246b9e931f7_add_sort_order_and_metadata_to_topics.py  f8de8454d7c6_add_coaching_events_table.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  (+14 more)
backend/app/core/: constants.py  security.py  state.py
backend/app/db/: session.py
backend/app/db/repositories/: base.py
backend/app/models/: __init__.py  coaching_event.py  daily_task.py  progress_log.py  reschedule_event.py  study_card.py  study_plan.py  subject.py  test_session.py  topic.py  user.py
backend/app/schemas/: plan.py  subject.py  task.py  topic.py  user.py
backend/app/services/: adaptive_scheduler.py  ai_client.py  analytics_engine.py  base.py  cache_service.py  decomposition_service.py  execution_tracker.py  performance_coach.py  plan_generator.py  review_service.py  study_card_service.py  subject_service.py  test_generator.py  test_service.py  topic_service.py
backend/app/services/ml/: knowledge_tracer.py  mastery_engine.py  profiler.py
backend/app/utils/: logging.py
backend/scripts/: init_db.sh
backend/tests/: conftest.py  test_auth.py
(+76 files in other folders)
